moved Midi dependency to its own classes

--- a/DPA_Musicsheets/DPA_Musicsheets.csproj
+++ b/DPA_Musicsheets/DPA_Musicsheets.csproj
@@ -102,6 +102,19 @@
     <Compile Include="Converters\Strategy\MidiConverter.cs" />
     <Compile Include="Converters\MusicConverter.cs" />
     <Compile Include="Converters\Strategy\WPFConverter.cs" />
+    <Compile Include="Managers\MidiPlayer.cs" />
+    <Compile Include="Models\Lilypond\Alternative.cs" />
+    <Compile Include="Models\Lilypond\Bar.cs" />
+    <Compile Include="Models\Lilypond\Clef.cs" />
+    <Compile Include="Models\Lilypond\Note.cs" />
+    <Compile Include="Models\Lilypond\Repeat.cs" />
+    <Compile Include="Models\Lilypond\Rest.cs" />
+    <Compile Include="Models\Lilypond\Section.cs" />
+    <Compile Include="Models\Lilypond\Staff.cs" />
+    <Compile Include="Models\Lilypond\Tempo.cs" />
+    <Compile Include="Models\Lilypond\Time.cs" />
+    <Compile Include="Models\Lilypond\Token.cs" />
+    <Compile Include="Models\Wrappers\MidiFile.cs" />
     <Compile Include="Services\FileIO.cs" />
     <Compile Include="Converters\Strategy\IMusicConverterStrategy.cs" />
     <Compile Include="Managers\MusicLoader.cs" />
