--- a/DPA_Musicsheets/DPA_Musicsheets.csproj
+++ b/DPA_Musicsheets/DPA_Musicsheets.csproj
@@ -103,17 +103,10 @@
     <Compile Include="Converters\MusicConverter.cs" />
     <Compile Include="Converters\Strategy\WPFConverter.cs" />
     <Compile Include="Managers\MidiPlayer.cs" />
-    <Compile Include="Models\Lilypond\Alternative.cs" />
-    <Compile Include="Models\Lilypond\Bar.cs" />
-    <Compile Include="Models\Lilypond\Clef.cs" />
-    <Compile Include="Models\Lilypond\Note.cs" />
-    <Compile Include="Models\Lilypond\Repeat.cs" />
-    <Compile Include="Models\Lilypond\Rest.cs" />
-    <Compile Include="Models\Lilypond\Section.cs" />
-    <Compile Include="Models\Lilypond\Staff.cs" />
-    <Compile Include="Models\Lilypond\Tempo.cs" />
-    <Compile Include="Models\Lilypond\Time.cs" />
+    <Compile Include="Models\Lilypond\ExpressionToken.cs" />
+    <Compile Include="Models\Lilypond\LilypondContext.cs" />
     <Compile Include="Models\Lilypond\Token.cs" />
+    <Compile Include="Models\Lilypond\WrappingToken.cs" />
     <Compile Include="Models\Wrappers\MidiFile.cs" />
     <Compile Include="Services\FileIO.cs" />
     <Compile Include="Converters\Strategy\IMusicConverterStrategy.cs" />
