--- a/DPA_Musicsheets/packages.config
+++ b/DPA_Musicsheets/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net461" />
   <package id="Sanford.Multimedia.Midi" version="6.6.0" targetFramework="net461" />
 </packages>
