--- a/DPA_Musicsheets/DPA_Musicsheets.csproj
+++ b/DPA_Musicsheets/DPA_Musicsheets.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Managers\MusicLoader.cs" />
     <Compile Include="Models\MusicToken.cs" />
     <Compile Include="State\IdleState.cs" />
+    <Compile Include="State\MainViewModelState.cs" />
     <Compile Include="State\RenderingState.cs" />
     <Compile Include="State\State.cs" />
     <Compile Include="State\UnsavedState.cs" />
@@ -200,6 +201,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram.cd" />
     <None Include="Files\Eenvoudige voorbeeldfiles\Doorklinken.pdf" />
     <None Include="Files\Eenvoudige voorbeeldfiles\Keywords.pdf" />
     <None Include="Files\Eenvoudige voorbeeldfiles\Maatwissel.pdf" />
